// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Production comments 1`] = `
"import _camelCase from \\"lodash/camelCase\\";

function translate(a) {
  return _camelCase(a);
}"
`;

exports[`Production deadcode 1`] = `
"const STATIC = !1;
!1, !1;"
`;

exports[`Production es3: literal 1`] = `"foo.catch;"`;

exports[`Production es3: member 1`] = `
"var foo = {
  catch: function () {}
};"
`;

exports[`Production es2015: classes 1`] = `
"export class Component {
  main() {}

}"
`;

exports[`Production es2015: for_off 1`] = `
"function test() {
  for (const a of tasks) try {
    executeCommands();
  } catch (a) {
    console.error(\\"Error\\");
  }
}"
`;

exports[`Production es2015: generator 1`] = `
"function* idMaker() {
  for (var a = 0;;) yield a++;
}"
`;

exports[`Production es2015: set 1`] = `"new Set([1, 2, 3]);"`;

exports[`Production es2016: exponentiation 1`] = `"var result = 8;"`;

exports[`Production esnext: async 1`] = `
"function wait() {
  return new Promise(function (a, b) {
    return Promise.resolve(loadData()).then(function () {
      try {
        return a();
      } catch (a) {
        return b(a);
      }
    }, b);
  });
}"
`;

exports[`Production esnext: async_loop 1`] = `
"function executeTasks(a) {
  return new Promise(function (b, c) {
    function d() {
      var [a, b] = h();
      return e.bind(this, a, b);
    }

    function e(a, b) {
      if (h = function () {
        return [a, b];
      }, !(b[1] = b[0].next()).done && ((a = b[1].value) || !0)) {
        var e = function () {
          try {
            return d;
          } catch (a) {
            return c(a);
          }
        },
            f = function () {
          try {
            return console.error(\\"Error\\"), e();
          } catch (a) {
            return c(a);
          }
        };

        try {
          return Promise.resolve(executeCommands()).then(function () {
            try {
              return e();
            } catch (a) {
              return f(a);
            }
          }, f);
        } catch (a) {
          f(a);
        }
      } else return [1];
    }

    function f() {
      return b();
    }

    var g, h;
    return (g = function (a) {
      for (; a;) {
        if (a.then) return void a.then(g, c);

        try {
          if (a.pop) {
            if (a.length) return a.pop() ? f.call(this) : a;
            a = d;
          } else a = a.call(this);
        } catch (a) {
          return c(a);
        }
      }
    }.bind(this))(e.bind(this, void 0, [a[Symbol.iterator]()]));
  });
}"
`;

exports[`Production esnext: class properties 1`] = `
"import _defineProperty from \\"@babel/runtime/helpers/builtin/es6/defineProperty\\";
export class Component {
  constructor() {
    _defineProperty(this, \\"onClick\\", () => {});
  }

}"
`;

exports[`Production esnext: dynamic import 1`] = `
"Promise.resolve().then(() => require(\\"lodash\\")).then(a => {
  console.log(a.camelCase(\\"hello world\\"));
});"
`;

exports[`Production esnext: import 1`] = `
"import _camelCase from \\"lodash/camelCase\\";
console.log(_camelCase(\\"hello world\\"));"
`;

exports[`Production esnext: object spread 1`] = `
"import _objectSpread from \\"@babel/runtime/helpers/builtin/es6/objectSpread\\";

let original = {
  bar: 10
},
    variant = _objectSpread({
  foo: 1
}, original);"
`;

exports[`Production lodash: async 1`] = `
"import _parallel from \\"async/parallel\\";

_parallel([]);"
`;

exports[`Production lodash: lodash 1`] = `
"import _camelCase from \\"lodash/camelCase\\";

_camelCase(\\"hello world\\");"
`;

exports[`Production lodash: recompose 1`] = `
"import _compose from \\"recompose/compose\\";

_compose([]);"
`;

exports[`Production react: jsx 1`] = `
"var _ref = React.createElement(\\"h1\\", null, \\"Hello\\");

function render() {
  return _ref;
}"
`;

exports[`Production react: jsx spread 1`] = `
"function render(a) {
  return React.createElement(\\"h1\\", Object.assign({
    className: \\"large\\"
  }, a), \\"Hello\\");
}"
`;

exports[`Production react: proptypes 1`] = `
"import React from \\"react\\";

class MyComponent extends React.Component {
  render() {
    return React.createElement(\\"div\\", null, this.props.userName);
  }

}"
`;
